namespace java com.froad.thrift.vo


/**
 * HistoryTaskActorVo
 */
struct HistoryTaskActorVo {
    1: optional string taskId,    /** taskId */
    2: optional string actorId    /** actorId */
}
